Updated nani siya

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,11 +14,11 @@ html
 center
 .row
   .column
-    img(src=image_1)
+    img(src=image_1).img
   .column
-    img(src=image_2)
+    img(src=image_2).img
   .column
-    img(src=image_3)
+    img(src=image_3).img
 div#lawas
     p='Major Island Group: ' + group
     p='Population: ' + population
