--- a/views/style.css
+++ b/views/style.css
@@ -1,15 +1,18 @@
 body{
-    font-family: Arial;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
-    background-color: rgb(230, 230, 230);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;  
+    color: white;
+    height: 100%;
+    font-size: 25px;
 }
 #title{
-    margin-top: 0;
-    border: 1px solid white;
-    box-shadow: 0px 1px 4px 3px #888888;
-    padding: 50px;
-    font-size: 50px;
-    background-color: white;
+    padding: 60px;
+    font-size: 60px;
+    color: white;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("https://images.pexels.com/photos/442577/pexels-photo-442577.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover; 
 }
 
 .column {
@@ -17,7 +20,7 @@ body{
     width: 32.5%;
     padding: 5px;
   }
-img{
+.img{
     width: 100%!important;
     height: 338.66px!important;
 }
@@ -30,7 +33,19 @@ img{
   }
   button{
       margin-right: 5px;
+      border-radius: 5px;
+      border: 1px solid white;
+      background-color: rgba(255, 204, 102,0.4);
+      font-size: 20px;
   }
   #lawas{
     padding: 20px;
+  }
+  #NOTFOUND{
+      margin: 0;
+      position: absolute;
+      width: 1280px;
+      top: 0px;
+      left: 0px;
+      height: 913px;
   }
