--- a/views/style.css
+++ b/views/style.css
@@ -49,3 +49,14 @@ body{
       left: 0px;
       height: 913px;
   }
+  #delicacy{
+      border: 1px solid rgba(255, 204, 153,0.4);
+      border-radius: 10px;
+      background-color: rgba(255, 204, 153,0.4);
+      color: black;
+      padding: 20px;
+  }
+  #imgPopulation{
+      width: 200px;
+      height: 350px;
+  }
