--- a/views/style.css
+++ b/views/style.css
@@ -1,18 +1,20 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-    background-size: cover;  
-    color: white;
+    /* background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;   */
+    color: black;
     height: 100%;
     font-size: 25px;
+    background-color: bisque;
 }
 #title{
     padding: 60px;
     font-size: 60px;
     color: white;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("https://images.pexels.com/photos/442577/pexels-photo-442577.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-    background-size: cover; 
+    background-color: rgba(128, 128, 128,0.4)
+    /* background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("https://images.pexels.com/photos/442577/pexels-photo-442577.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;  */
 }
 
 .column {
@@ -35,7 +37,7 @@ body{
       margin-right: 5px;
       border-radius: 5px;
       border: 1px solid white;
-      background-color: rgba(255, 204, 102,0.4);
+      background-color: rgba(102, 153, 0,0.4);
       font-size: 20px;
   }
   #lawas{
@@ -52,7 +54,7 @@ body{
   #delicacy{
       border: 1px solid rgba(255, 204, 153,0.4);
       border-radius: 10px;
-      background-color: rgba(255, 204, 153,0.4);
+      background-color: rgba(102, 153, 0,0.4);
       color: black;
       padding: 20px;
   }
